glossary: define Twigil

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -839,6 +839,10 @@ The value representing logical C<True> of the L<#Bool> L<enum|#Enum>.
 
 =head1 Twigil
 
+A secondary L<sigil|#Sigil>. For example, %*ENV has a sigil of % and a
+twigil of *.
+See L<Twigils|/doc/Language/variables.pod#Twigils>.
+
 =head1 Type Object
 
 A I<type object> is an object representing a L<class|#Class>, L<role|#Role>,
