glossary: define Variable

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -872,6 +872,8 @@ languages:
 
 =head1 Variable
 
+A variable is a name for a L<container|#Container>.
+
 =head1 Virtual Machine
 
 A virtual machine is the Perl compiler entity that executes the
