Add some more explanation (labster++)

--- a/Type/IO/Path.pod
+++ b/Type/IO/Path.pod
@@ -512,7 +512,9 @@ or more readably:
 
 =head2 method mode
 
-Return an L<IntStr> object representing the POSIX permissions of a file.
+Return an L<IntStr> object representing the POSIX permissions of a file.  The
+Str part of the result is the octal representation of the file permission, like
+the form accepted by the chmod(1) utility.
 
     say ~"path/to/file".IO.mode;        #  e.g. '0644'
     say +"path/to/file".IO.mode;        #  e.g. 420, where sprintf('%04o', 420) eq '0644'
