define the Camelia butterfly

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -215,6 +215,8 @@ values in the junction are True.
 
 =head1 Camelia
 
+A butterfly image intended primarily to represent Perl 6, The Language.
+
 =head1 camelia
 
 The L<#Bot> on the #perl6 L<#IRC> channel that evaluates code, eg:
