--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -209,7 +209,18 @@ values in the junction are True.
         say 'success';
     }
 
+=head1 block
+
 =head1 Bool
+
+L<#Boolean> type.
+
+=head1 Boolean
+
+L<Value|#value> of type L<#Bool>. Apart the class itself, can be either
+C<True> or C<False>.
+
+=head1 bytecode
 
 =head1 Callable
 
@@ -227,6 +238,9 @@ The L<#Bot> on the #perl6 L<#IRC> channel that evaluates code, eg:
 This is a handy tool for showing people if the output is (un)expected.
 
 =head1 Class
+
+A basic software structure in L<#OOP>.
+See the L<Wikipedia entry|http://en.wikipedia.org/wiki/Class_%28computer_programming%29>.
 
 =head1 Code
 
@@ -320,15 +334,41 @@ historical document for reference.  See also L<#Synopsis>.
 
 The value representing logical C<False> of the L<#Bool> L<enum|#Enum>.
 
+=head1 fiddly
+
 =head1 Field
 
 See L<#Attribute>.
 
 =head1 Grammar
 
+A feature of Perl 6 that uses L<#regex>es to implement a grammar for parsing
+text. Perl 6 implementations use grammars themselves to parse the language.
+The results of parsing with a grammar can be further passed on to
+L<actions|#Actions>.  A grammar is composed of methods introduced by one of the
+three keywords C<rule>, C<L<#token>>, C<regex>. There is L<#backtrack>ing
+only in C<regex> and C<rule> implies L<#whitespace>s between subrules.
+
+Parsing is done conceptually in two phases, L<lexing> and
+L<syntax analysis>.  Lexing breaks the input string in tokens that are the
+input of L<syntax analysis|#Syntax analysis>. In Perl 6, things are
+not so clear cut and both phases are defined in the L<grammar|#Grammar>.
+
 =head1 handles
 
+=head1 has
+
+A keyword used to define L<attributes|#Attributes>.
+
 =head1 Hash
+
+A data type, conveniently available in variables starting with the percent
+sign C<%> and provided by types conformant to the C<Associative> role like
+the C<Hash> type.  Often called associative table in other languages.
+
+=head1 iffy
+
+=head1 import
 
 =head1 Instance
 
@@ -359,6 +399,8 @@ To put things another way, a class contains the blueprints of methods and
 attributes, and an instance carries it into the real world.
 
 =head1 Interface
+
+An interface is an L<abstract class|#Abstract Class>.
 
 =head1 IRC
 
@@ -581,7 +623,16 @@ in Perl 6.  It is what C<self> refers to in a method.
 
 =head1 JIT
 
+L<Just-in-time compilation|https://en.wikipedia.org/wiki/Just-in-time_compilation>,a technique for improving the performance of virtual machines.
+
 =head1 Junction
+
+A compound type that is transparent to many operations. See
+L<http://doc.perl6.org/type/Junction>.
+
+=head1 JVM
+
+Java Virtual Machine
 
 =head1 Larry Wall
 
@@ -628,6 +679,8 @@ Examples of things that are not lvalues:
 
 These are typically called L<rvalues|#rvalue>.
 
+=head1 machine code
+
 =head1 Mainline
 
 The C<mainline> is the program text that is not part of any kind of block.
@@ -639,7 +692,7 @@ The C<mainline> is the program text that is not part of any kind of block.
     f();        # in mainline again
 
 You can also have the mainline of any package-like declarator, such as
-L<class|#class>, L<module|#Module>, L<grammar|#Grammar>, etc.  These are
+L<class|#Class>, L<module|#Module>, L<grammar|#Grammar>, etc.  These are
 typically run just after the class/module/grammar have been compiled (or
 when loaded from a pre-compiled file).
 
@@ -648,6 +701,8 @@ when loaded from a pre-compiled file).
 See L<#Attribute>.
 
 =head1 Method
+
+Methods are L<subroutine|#Subroutine>s that are called with an L<invocant|#Invocant>.
 
 =head1 MoarVM
 
@@ -662,7 +717,11 @@ for entries missing from the present one.
 
 =head1 Mu
 
+The mystical class from which all other classes are derived (無).
+
 =head1 Multi-Dispatch
+
+=head1 multi-method
 
 =head1 Niecza
 
@@ -686,7 +745,38 @@ into its equivalent L<abstract syntax tree|#AST> representation.
 
 Not Yet Implemented
 
+=head1 OOP
+
+Object Oriented Programming
+
+=head1 opcode
+
 =head1 Operator
+
+An expression is made of operators and operands. More precisely it is made
+of an operator and operands that can be subexpressions or L<#value>s.
+Operators are an alternative syntax for a L<#multi-method>. With that
+syntax, what would be the L<argument|#Argument>s of the function are named
+operands instead. Operators are classified into
+L<categories|http://design.perl6.org/S02.html#Grammatical_Categories> of
+categories.  A category has a precedence, an arity, and can be L<#fiddly>,
+L<#iffy>, L<#diffy>.  Perl 6 is very creative as to what is an operator, so
+there are many categories.  Operators are made of many tokens, possibly with
+a subexpression.  For example, C<@a[0]> belongs to the postcircumfix
+category, is broken into the operand C<@a> and the postcircumfix operator
+C<[0]> where C<0> is the postcircumfixed subexpression.
+
+The C<< <O(I<...>)>  >> construction gives information about an operator
+that completes the information provided by its category.  Below
+C<%conditional> is the category, C<< :reducecheck<ternary> >>, which
+specifies calling C<.ternary> to post-process the L<parse subtree|/parse
+tree> and C<< :pasttype<if> >> specifies the NQP L<#opcode> generated in the
+L<#AST> from the parse subtree.
+
+        <O('%conditional, :reducecheck<ternary>, :pasttype<if>')>
+
+
+=head1 OS
 
 =head1 Package
 
@@ -724,6 +814,11 @@ The Perl programming language in its many forms.
 A way to describe L<Perl> as a language, considered to be improper by
 many in the L<#Perl Community>.
 
+=head1 POD
+
+B<P>lain B<O>l' B<D>ocumentation, a documentation format understood by Perl
+6. See L<S26|http://design.perl6.org/S26.html> for details.
+
 =head1 Property
 
 See L<#Attribute>.
@@ -732,6 +827,8 @@ See L<#Attribute>.
 
 A feature of L<https://github.com> that allows you to make patches
 to be easily applied using the Github user interface.
+
+=head1 pugs
 
 =head1 QAST
 
@@ -744,11 +841,33 @@ the L<#JVM>.  It is an abbreviation of "Rakuda-do," which, when translated
 from Japanese, means "The Way of the Camel".  Also, in Japanese, "Rakudo"
 means "Paradise."
 
+=head1 Regular Expression
+
+=head1 regex
+
+L<#Regular Expression>.
+
 =head1 Repository
 
 =head1 roast
 
+The Perl 6 L<specification tests|/spectest>, which live here:
+L<https://github.com/perl6/roast/>.  Originally developed for L<#pugs>, it
+now serves all Perl 6 implementations.  Why roast? It's the B<r>epository
+B<o>f B<a>ll B<s>pec B<t>ests.
+
 =head1 Role
+
+A role can be composed with zero or more other roles, then instantiated into
+a L<class|#Class>. The L<sigil#Sigil> of a variable name indicates that the defined
+value in the container denoted by the variable belongs to a class composed
+from the associated role.  For example, the sigil C<@> denotes the
+C<Positional> role. So a variable C<@a> may contain a value of type C<List>
+because C<List.does(Positional)>.
+
+=head1 rule
+
+(Used in regular expressions)
 
 =head1 rvalue
 
@@ -790,6 +909,11 @@ This can also be used to collect all possible named parameters in a call:
 
 =head1 Spesh
 
+A functionality of the L<#MoarVM> platform that uses run-time gathered data
+to improve commonly used pieces of L<#bytecode>. It is much like a L<#JIT>
+compiler, except that those usually output L<#machine code> rather than
+bytecode.
+
 =head1 STD
 
 STD.pm is the "standard" Perl 6 grammar definition, see
@@ -801,7 +925,16 @@ it's more of a guideline or model for Perl 6 implementations to follow.
 
 =head1 Subroutine
 
+A subroutine is like a L<#block>, but its L<#runtime> context is stacked.
+When a subroutine is called, its context is pushed in the context stack
+is popped and the return argument becomes the value of the calling expression.
+
 =head1 Symbol
+
+Fancy alternative way to denote a name. Generally used in the context of
+L<module|#Module>s linking, be it in the L<#OS> level, or at the Perl 6 L<#VM> level
+for modules generated from languages targeting these VMs.  The set of
+L<#import>ed or exported symbols is called the symbol table.
 
 =head1 Synopsis
 
@@ -813,6 +946,8 @@ is not always so flagged or more recent additions have not been documented.
 This is even more true of material that has not been yet implemented.
 
 =head1 test suite
+
+The Perl 6 test suite is L<#roast>
 
 =head1 Texas operator
 
@@ -834,6 +969,9 @@ L<Exegeses|#Exegesis>.
 
 L<#IRC> screen name for L<#Larry Wall>, creator of Perl. The name comes from
 the pronunciation of L<#TIMTOWTDI> as a word.
+
+=head1 token
+
 
 =head1 True
 
@@ -872,6 +1010,9 @@ languages:
     # perl6 -e 'my Int $a; sub f(Int $x) { $x + 1 }; f($a);'
     Invocant requires an instance, but a type object was passed
 
+=head1 value
+
+
 =head1 Variable
 
 A variable is a name for a L<container|#Container>.
@@ -883,6 +1024,9 @@ L<bytecode|#Bytecode>.  It can optimize the bytecode or generate
 L<machine code|#Machine code> L<Just in Time|#JIT>.  Examples are
 L<#MoarVM>, L<#Parrot> (who are intended to run Perl 6) and more
 generic virtual machines such as L<#JVM> and L<#Javascript>.
+
+=head1 whitespace
+
 
 =head1 yoleaux
 
@@ -910,6 +1054,9 @@ of a codepoint.
 Some L<#IRC> clients then easily allow you to copy/paste the codepoint in
 question, which can be sometimes be easier than other unicode codepoint
 input methods.
+
+=head1 6model
+
 
 =head1 $
 
