clean up various doc links

--- a/Type/CurrentThreadScheduler.pod
+++ b/Type/CurrentThreadScheduler.pod
@@ -7,6 +7,6 @@
     class CurrentThreadScheduler does Scheduler { ... }
 
 C<CurrentThreadScheduler> executes tasks on the current threads. This means
-that L<#method cue> blocks until the code has finished executing.
+that L<Scheduler#method cue> blocks until the code has finished executing.
 
 =end pod
