--- a/Type/Dateish.pod
+++ b/Type/Dateish.pod
@@ -63,8 +63,8 @@ L<Str|/type/Str>. If none was provided at object construction, a
 default formatter is used.  In that case the method will return a
 Callable type object.
 
-The formatting function is called by L<#method Str> with the invocant as its
-only argument.
+The formatting function is called by L<DateTime#method Str> with the
+invocant as its only argument.
 
     my $dt = Date.new('2015-12-31');  # (no formatter specified)
     say $dt.formatter.WHAT;           # (Callable)
