--- a/Type/Routine.pod
+++ b/Type/Routine.pod
@@ -180,7 +180,8 @@ say double 21;      # 42
 From inside another file you'd say C<use Foo;> to load a module and import the
 exported functions.
 
-See L</language/modules#Exporting and Selective Importing> for more details.
+See L<Exporting and Selective Importing Modules|/language/modules#Exporting and Selective Importing>
+for more details.
 
 =head2 trait is DEPRECATED
 
