--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -105,7 +105,7 @@ L<#prefix ...> etc. stub operators.
 
 
 Defining custom operators is covered in
-L</language/functions#Defining_Operators>.
+L<Defining Operators functions|/language/functions#Defining_Operators>.
 
 =head1 Meta Operators
 
