--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -1067,7 +1067,7 @@ Usage:
     say (0..0x1FFFF).sort(*.uniname.chars)[*-1].chr.uniname;
     # «ARABIC LIGATURE UIGHUR KIRGHIZ YEH WITH HAMZA ABOVE WITH ALEF MAKSURA INITIAL FORM␤»
 
-Interprets the invocant / first argument as a L</type/Str>, and returns the
+Interprets the invocant / first argument as a L<Str|/type/Str>, and returns the
 Unicode codepoint name of the first character. To convert a whole string use L<uninames|#routine_uninames>.
 
 =head2 routine uninames
