--- a/Type/Mu.pod
+++ b/Type/Mu.pod
@@ -286,7 +286,8 @@ Marks a type as being exported, that is, available to external users.
 A user of a module or class automatically gets all the symbols imported that
 are marked as C<is export>.
 
-See L</language/modules#Exporting_and_Selective_Importing> for more details.
+See L<Exporting and Selective Importing Modules|/language/modules#Exporting_and_Selective_Importing>
+for more details.
 
 =head2 method take
 
