Fix linkchecker warning for rakudo-star
This assumes that star will always be a directory, but that seems reasonable

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -27,7 +27,7 @@ of the 'use 6.c' pragma..
 
 Linux or Mac users probably want to download Rakudo Star and
 install via compilation (a simple process) the MoarVM based version available
-from L<http://rakudo.org/downloads/star/|http://rakudo.org/downloads/star>.
+from L<http://rakudo.org/downloads/star/>.
 
 Compilation needs a C compiler and Perl 5 installed.
 
