consistently use =head1 Methods

--- a/Type/Rational.pod
+++ b/Type/Rational.pod
@@ -12,7 +12,7 @@ and denominator.
 
 Built into Perl 6 are L<Rat> and L<FatRat>, which both do the C<Rational> role.
 
-=head1 methods
+=head1 Methods
 
 =head2 method new
 
