--- a/Type/Supplier.pod
+++ b/Type/Supplier.pod
@@ -24,7 +24,7 @@ Will output:
 I<on demand> supplies are created by the factory methods of the L<Supply>
 class or by the C<supply> keyword.
 
-=head1 METHODS
+=head1 Methods
 
 =head2 method new
 
