Add an example of using the ourput of IO.mode as input to IO.chmod

--- a/Type/IO/Path.pod
+++ b/Type/IO/Path.pod
@@ -516,8 +516,15 @@ Return an L<IntStr> object representing the POSIX permissions of a file.  The
 Str part of the result is the octal representation of the file permission, like
 the form accepted by the chmod(1) utility.
 
-    say ~"path/to/file".IO.mode;        #  e.g. '0644'
-    say +"path/to/file".IO.mode;        #  e.g. 420, where sprintf('%04o', 420) eq '0644'
+    say ~"path/to/file".IO.mode;        # e.g. '0644'
+    say +"path/to/file".IO.mode;        # e.g. 420, where sprintf('%04o', 420) eq '0644'
+
+The result of this can be used in the other methods that take a mode as an
+argument.
+
+    "path/to/file1".IO.chmod("path/to/file2".IO.mode);  # will change the
+                                                        # permissions of file1
+                                                        # to be the same as file2
 
 =head1 Related roles and classes
 
