Added docs for Baggy.elems

--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -69,7 +69,18 @@ weights, i.e. L<Bag> and L<BagHash>.
 
 =head2 method elems
 
-=comment TODO
+Defined as:
+
+    method elems(Baggy:D:) returns Int:D
+
+Returns the number of elements in the C<Baggy> object without
+taking the individual elements weight into account.
+
+    my $breakfast = bag <eggs spam spam spam>;
+    say $breakfast.elems;                             # 2
+
+    my $n = ("b" => 9.4, "b" => 2).MixHash;
+    say $n.elems;                                     # 1
 
 =head2 method total
 
