fix EVAL desc grammar

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -1446,7 +1446,7 @@ Symbols in the current lexical scope are visible to code in an C<EVAL>.
     EVAL 'say $answer;';    # says 42
 
 However, since the set of symbols in a lexical scope is immutable after compile
-time, an EVAL can never introduced symbols into the surrounding scope.
+time, an EVAL can never introduce symbols into the surrounding scope.
 
     EVAL 'my $lives = 9'; say $lives;   # error, $lives not declared
 
