--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -202,12 +202,12 @@ Marks a test as passed if the given object C<$value> is, or inherits from, the
 given C<$expected-type>.  For convenience, types may also be specified as a
 string.  The function accepts an optional C<$description> of the test.
 
-    class Womble {}
-    class GreatUncleBulgaria is Womble {}
-    my $womble = GreatUncleBulgaria.new;
+    class Butterfly {}
+    class Camelia is Butterfly {}
+    my $creature = Camelia.new;
 
-    isa-ok $womble, Womble, "Great Uncle Bulgaria is a womble";
-    isa-ok $womble, 'Womble';     # equivalent
+    isa-ok $creature, Butterfly, "Camelia is a butterfly";
+    isa-ok $creature, 'Butterfly';     # equivalent
 
 =head2 By method name
 
