Added docs for Baggy.keys. #perl6++ for reviewing

--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -41,7 +41,18 @@ L<Mixy>.
 
 =head2 method keys
 
-=comment TODO
+Defined as:
+
+    method keys(Baggy:D:) returns List:D
+
+Returns a list of all keys in the C<Baggy> object without taking
+their individual weights into account as opposed to L<kxxv|#method kxxv>.
+
+    my $breakfast = bag <eggs spam spam spam>;
+    say $breakfast.keys.sort;                        # (eggs spam)
+
+    my $n = ("a" => 5, "b" => 2).BagHash;
+    say $n.keys.sort;                                # (a b)
 
 =head2 method values
 
