--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -343,7 +343,7 @@ order|https://en.wikipedia.org/wiki/C3_linearization>.  You can ask a type
 for its MRO through a call to its meta class:
 
 =for code :allow<B L>
-say List<.^L<mro|type/Metamodel::C3MRO#mro>>;      # List() Cool() Any() Mu()
+say ListB<.^L<mro|/type/Metamodel::C3MRO#mro>>;      # List() Cool() Any() Mu()
 
 If a class does not specify a parent class, L<Any> is assumed by default.
 All classes directly or indirectly derive from L<Mu>, the root of the type
