--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -56,7 +56,17 @@ their individual weights into account as opposed to L<kxxv|#method kxxv>.
 
 =head2 method values
 
-=comment TODO
+Defined as:
+
+    method values(Baggy:D:) returns List:D
+
+Returns a list of all values, i.e. weights, in the C<Baggy> object.
+
+    my $breakfast = bag <eggs spam spam spam>;
+    say $breakfast.values.sort;                      # (1 3)
+
+    my $n = ("a" => 5, "b" => 2, "a" => 1).BagHash;
+    say $n.values.sort;                              # (2 6)
 
 =head2 method kv
 
