--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -133,7 +133,7 @@ of the test.
 
 =head2 By approximate numeric comparison
 
-Approximate numeric comparisons maye be tested by the C<is-approx>
+Approximate numeric comparisons may be be tested by the C<is-approx>
 function which has three signatures. Note that in all three versions,
 the final C<$description> argument is optional (but recommended).
 
