Added docs for Baggy.kv

--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -70,7 +70,17 @@ Returns a list of all values, i.e. weights, in the C<Baggy> object.
 
 =head2 method kv
 
-=comment TODO
+Defined as:
+
+    method kv(Baggy:D:) returns List:D
+
+Returns a list of keys and values interleaved.
+
+    my $breakfast = bag <eggs spam spam spam>;
+    say $breakfast.kv;                                # (spam 3 eggs 1)
+
+    my $n = ("a" => 5, "b" => 2, "a" => 1).BagHash;
+    say $n.kv;                                        # (a 6 b 2)
 
 =head2 method kxxv
 
