Added docs for Baggy.total

--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -115,7 +115,18 @@ taking the individual elements weight into account.
 
 =head2 method total
 
-=comment TODO
+Defined as:
+
+    method total(Baggy:D:)
+
+Returns the sum of weights for all elements in the C<Baggy>
+object.
+
+    my $breakfast = bag <eggs spam spam bacon>;
+    say $breakfast.total;                             # 4
+
+    my $n = ("a" => 5, "b" => 1, "b" => 2).BagHash;
+    say $n.total;                                     # 8
 
 =head2 method ACCEPTS
 
