Fixed broken link

--- a/Type/Baggy.pod
+++ b/Type/Baggy.pod
@@ -34,7 +34,7 @@ Defined as:
     multi method roll(Baggy:D:) returns Any:D
     multi method roll(Baggy:D: $count) returns Seq:D
 
-Like an ordinary list L<roll|/type/List/#routine_roll>, but returns keys of the invocant weighted
+Like an ordinary list L<roll|/type/List#routine_roll>, but returns keys of the invocant weighted
 by their values, as if the keys were replicated the number of times indicated
 by the corresponding value and then list roll used. The underlying
 metaphor for rolling is that you're throwing C<$count> dice that are
