Change all wikipedia links from http to https
Wikipedia is now redirecting all http requests to https. This means that any
current link causes an unnecessary (permanent) redirect when the user clicks
on it.

The link checker also complains about it, so it is going to help with #561
a bit.

--- a/Language/concurrency.pod
+++ b/Language/concurrency.pod
@@ -5,7 +5,7 @@
 =SUBTITLE Concurrency and Asynchronous Programming
 
 In common with most modern programming languages, Perl 6 is designed to
-L<support concurrency|http://en.wikipedia.org/wiki/Concurrent_computing>
+L<support concurrency|https://en.wikipedia.org/wiki/Concurrent_computing>
 (allowing more than one thing to happen at the same time) and
 asynchronous programming (sometimes called event driven or reactive
 programming - that is an event or change in some part of a program
