--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -179,7 +179,7 @@ L<class|#Class>:
 =head1 AST
 
 Acronym for
-L<B<A>bstract B<S>yntax B<T>ree|http://en.wikipedia.org/wiki/Abstract_syntax_tree>.
+L<B<A>bstract B<S>yntax B<T>ree|https://en.wikipedia.org/wiki/Abstract_syntax_tree>.
 Used in many places, including L<actions|#Actions>, L<#PAST>, and L<#QAST>.
 
 =head1 Autothreading
@@ -240,7 +240,7 @@ This is a handy tool for showing people if the output is (un)expected.
 =head1 Class
 
 A basic software structure in L<#OOP>.
-See the L<Wikipedia entry|http://en.wikipedia.org/wiki/Class_%28computer_programming%29>.
+See the L<Wikipedia entry|https://en.wikipedia.org/wiki/Class_%28computer_programming%29>.
 
 =head1 Code
 
