--- a/Language/unicode_entry.pod
+++ b/Language/unicode_entry.pod
@@ -115,7 +115,7 @@ C<perl6> REPL, if one has started the REPL inside a Unix shell.
 
 =head1 Unicode characters useful in Perl 6
 
-=head2 L<Guillemets|http://en.wikipedia.org/wiki/Guillemet>
+=head2 L<Guillemets|https://en.wikipedia.org/wiki/Guillemet>
 
 These characters are used in French and German as quotation marks.  In Perl
 6 they are also used as quotation marks (in POD as an alternative to the
@@ -193,14 +193,14 @@ For example, to assign the value 3 to π, enter the following in Vim
 =head2 Superscripts and subscripts
 
 A limited set of
-L<superscripts and subscripts|http://en.wikipedia.org/wiki/Superscripts_and_Subscripts>
+L<superscripts and subscripts|https://en.wikipedia.org/wiki/Superscripts_and_Subscripts>
 can be created directly in unicode by using the C<U+207x>, C<U+208x> and
 (less often) the C<U+209x> ranges.  However, to produce a value squared (to
 the power of 2) or cubed (to the power of 3), one needs to use C<U+00B2> and
 C<U+00B3> since these are defined in the
-L<Latin1 supplement Unicode block|http://en.wikipedia.org/wiki/Latin-1_Supplement_(Unicode_block)>.
+L<Latin1 supplement Unicode block|https://en.wikipedia.org/wiki/Latin-1_Supplement_(Unicode_block)>.
 
-Thus, to write the L<Taylor series|http://en.wikipedia.org/wiki/Taylor_series>
+Thus, to write the L<Taylor series|https://en.wikipedia.org/wiki/Taylor_series>
 expansion around zero of the function C<exp(x)> one would input into e.g.
 vim the following:
 
