--- a/Type/Date.pod
+++ b/Type/Date.pod
@@ -51,7 +51,7 @@ Usage:
 
 Creates a new C<Date> object, either from a triple of (year, month, day)
 that can be coerced to integers, or from a string of the form C<YYYY-MM-DD>
-(L<ISO 8601|http://en.wikipedia.org/wiki/ISO_8601>), or from an Instant
+(L<ISO 8601|https://en.wikipedia.org/wiki/ISO_8601>), or from an Instant
 or DateTime object.  Optionally accepts a formatter as a named parameter.
 
 =head2 method new-from-daycount
@@ -187,7 +187,7 @@ Usage:
 
    DATE.Str
 
-Returns the date in C<YYYY-MM-DD> format (L<ISO 8601|http://en.wikipedia.org/wiki/ISO_8601>)
+Returns the date in C<YYYY-MM-DD> format (L<ISO 8601|https://en.wikipedia.org/wiki/ISO_8601>)
 
 =head2 method gist
 
@@ -199,7 +199,7 @@ Usage:
 
     DATE.gist
 
-Returns the date in C<YYYY-MM-DD> format (L<ISO 8601|http://en.wikipedia.org/wiki/ISO_8601>)
+Returns the date in C<YYYY-MM-DD> format (L<ISO 8601|https://en.wikipedia.org/wiki/ISO_8601>)
 
 =head1 Functions
 
