--- a/Type/Dateish.pod
+++ b/Type/Dateish.pod
@@ -224,7 +224,7 @@ Usage:
 
     Dateish.yyyy-mm-dd
 
-Returns the date in C<YYYY-MM-DD> format (L<ISO 8601|http://en.wikipedia.org/wiki/ISO_8601>)
+Returns the date in C<YYYY-MM-DD> format (L<ISO 8601|https://en.wikipedia.org/wiki/ISO_8601>)
 
 =head2 method daycount
 
