--- a/Type/Lock.pod
+++ b/Type/Lock.pod
@@ -83,6 +83,6 @@ Usage:
 
 Returns a condition variable. Compare
 L<http://web.stanford.edu/class/cs140/cgi-bin/lecture.php?topic=locks> or
-L<http://en.wikipedia.org/wiki/Monitor_%28synchronization%29> for background.
+L<https://en.wikipedia.org/wiki/Monitor_%28synchronization%29> for background.
 
 =end pod
