--- a/Type/Mu.pod
+++ b/Type/Mu.pod
@@ -7,7 +7,7 @@
     class Mu { ... }
 
 The root of the Perl 6 type hierarchy. For the origin of the name, see
-L<http://en.wikipedia.org/wiki/Mu_%28negative%29>. One can also say that
+L<https://en.wikipedia.org/wiki/Mu_%28negative%29>. One can also say that
 there are many undefined values in Perl 6, and C<Mu> is the I<most undefined>
 value.
 
