--- a/Type/IO/Path.pod
+++ b/Type/IO/Path.pod
@@ -269,9 +269,9 @@ L<fail|/routine/fail> with L<X::IO::Chdir>.
     method    mkdir(IO::Path:D: $mode 0o777 --> Bool)
 
 Creates one or more directories with the L<permissions|
-http://en.wikipedia.org/wiki/File_system_permissions#Numeric_notation>
+https://en.wikipedia.org/wiki/File_system_permissions#Numeric_notation>
 specified as an integer (thought still subject to L<umask|
-http://en.wikipedia.org/wiki/Umask>).
+https://en.wikipedia.org/wiki/Umask>).
 
 Throws an exception of type L<X::IO::Mkdir> if the
 directory cannot be created, except for the C<*@dirnames> form which
@@ -301,7 +301,7 @@ mode was successful. The method form returns True on success, and otherwise
 L<fails|/routine/fail> with L<X::IO::Chmod>.
 
 The mode is expected as an integer following the L<standard numeric notation|
-http://en.wikipedia.org/wiki/File_system_permissions#Numeric_notation>, and is
+https://en.wikipedia.org/wiki/File_system_permissions#Numeric_notation>, and is
 best written as an octal number:
 
     chmod 0o755, "myfile1", "myfile2"; # make two files executable by the owner
