--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -503,7 +503,7 @@ Technically this is not an operator, but syntax special-cased in the compiler.
 =head2 postfix C«.=»
 
 A X<mutating method call>. C<$invocant.=method> desugars to
-C<$invocant = $invocant.method>, similar to L<C<op=>>.
+C<$invocant = $invocant.method>, similar to L<C<=>>.
 
 Technically this is not an operator, but syntax special-cased in the compiler.
 
