--- a/Type/Mu.pod
+++ b/Type/Mu.pod
@@ -156,8 +156,8 @@ Classes may provide their own C<new> method to override this default.
 
 C<new> triggers an object construction mechanism that calls submethods named
 C<BUILD> in each class of an inheritance hierarchy, if they exist. See
-L<the documentation on object construction|/language/objects#Object
-Construction> for more information.
+L<the documentation on object construction|/language/objects#Object Construction>
+for more information.
 
 =head2 method bless
 
