Fixed some links (underscores instead of spaces)
I am not sure why this cannot be done automatically, but this change actually
fixes some links (and therefore the link checker will complain less).

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -1347,7 +1347,7 @@ to L<Str|/type/Str>, and searches for C<$needle> in the string starting from C<$
 It returns the offset into the string where C<$needle> was found, and an undefined
 value if it was not found.
 
-See L<the documentation in type Str|/type/Str#routine index> for examples.
+See L<the documentation in type Str|/type/Str#routine_index> for examples.
 
 =head2 routine rindex
 
@@ -1366,7 +1366,7 @@ L<Str|/type/Str> and C<$startpos> to L<Int|/type/Int>, and
 returns the last position of C<$needle> in C<$haystack> not after C<$startpos>.
 Returns an undefined value if C<$needle> wasn't found.
 
-See L<the documentation in type Str|/type/Str#routine rindex> for examples.
+See L<the documentation in type Str|/type/Str#routine_rindex> for examples.
 
 =head2 routine roots
 
