--- a/Type/Metamodel/MultipleInheritance.pod
+++ b/Type/Metamodel/MultipleInheritance.pod
@@ -30,9 +30,9 @@ so that L<mro_unhidden|/type/Metamodel::C3MRO#method mro_unhidden> skips it.
 Adds C<$parent> as a parent type. If C<$hides> is set to a true value, the
 parent type is added as a hidden parent.
 
-C<$parent> must be a fully L<composed|/language/mop#Composition time and
-static reasoning> typed. Otherwise an exception of type
-L<X::Inheritance::NotComposed> is thrown.
+C<$parent> must be a fully
+L<composed|/language/mop#Composition_time_and_static_reasoning> typed.
+Otherwise an exception of type L<X::Inheritance::NotComposed> is thrown.
 
 =head2 method parents
 
