--- a/Type/Routine.pod
+++ b/Type/Routine.pod
@@ -180,7 +180,7 @@ say double 21;      # 42
 From inside another file you'd say C<use Foo;> to load a module and import the
 exported functions.
 
-See L<Exporting and Selective Importing Modules|/language/modules#Exporting and Selective Importing>
+See L<Exporting and Selective Importing Modules|/language/modules#Exporting_and_Selective_Importing>
 for more details.
 
 =head2 trait is DEPRECATED
