--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -976,8 +976,8 @@ Strict mode is now on by default.
 
 Warnings are now on by default.
 
-C<no warnings> is currently NYI, but putting things in a quietly {} block
-will silence.
+C<no warnings> is currently L<NYI|/language/glossary#NYI>,
+but putting things in a quietly {} block will silence.
 
 =head3 C<autodie>
 
