--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -756,7 +756,7 @@ loop using the C<.lines> method.
 Note first this common misunderstanding about the C<for> and C<foreach>
 keywords. Many programmers think that they distinguish between the C-style
 three-expression form and the list-iterator form; they do not! In fact,
-they keywords are interchangeable; the Perl 5 compiler looks for the
+the keywords are interchangeable; the Perl 5 compiler looks for the
 semi-colons within the parens to determine which type of loop to parse.
 
 The C-style three-factor form now uses the C<loop> keyword, and is
