--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -467,7 +467,7 @@ Don't Repeat Yourself
 
 =head2 DWIM
 
-Do What I Mean.  A programmng language designer motto.
+Do What I Mean.  A programming language designer motto.
 
 =head2 flap
 
