--- a/Language/list.pod
+++ b/Language/list.pod
@@ -406,7 +406,7 @@ eye sore than a benefit to the user.  Basically, when you see a square bracket,
 remember the invisible dollar signs.
 
 Second, remember that these invisible dollar signs also protect against
-flattenning, so you cannot really flatten the elements inside of an Array
+flattening, so you cannot really flatten the elements inside of an Array
 with a normal call to C<flat> or C<.flat>.
 
     ((1,2),$(3,4)).flat.perl.say; # (1, 2, $(3, 4)).Seq
