--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -392,7 +392,7 @@ keep the value it acquires when the module gets precompiled.
 
 =head2 ABI/API Version
 
-If you write C<native('foo')> NativeCall will search libfoo.so under Unix like system (libfoo.dynlib on Os X, foo.dll on win32).
+If you write C<native('foo')> NativeCall will search libfoo.so under Unix like system (libfoo.dynlib on OS X, foo.dll on win32).
 In most modern system it will require you or the user of your module to install
 the development package because it's recommended to always provide an API/ABI version to a
 shared library, so libfoo.so ends often being a symbolic link provided only by a devel package.
