--- a/Type/Callable.pod
+++ b/Type/Callable.pod
@@ -12,7 +12,7 @@ L<Routine>, L<Sub>, L<Method>, L<Submethod> and L<Macro> types.
 Callables can be stored in C<&>-sigiled containers, the default type constraint
 of such a container is C<Callable>. A signature object can be used to
 force a check against the signature of the Callable to be stored into the
-congtainer.
+container.
 
 	my &a = {};
 	my &b = -> {};
