--- a/Type/IO.pod
+++ b/Type/IO.pod
@@ -45,7 +45,7 @@ outputs
 
 =head2 sub say
 
-Print the given text in human readable form, followed by a C<$*OUT.nl-out> (platform dependent newline) on C<$*OUT> (standard output). Long output may be truncted. For machine readable output use C<put>.
+Print the given text in human readable form, followed by a C<$*OUT.nl-out> (platform dependent newline) on C<$*OUT> (standard output). Long output may be truncated. For machine readable output use C<put>.
 
 With C<say>, the example code as mentioned in the C<print> section will be
 displayed as the user likely intended:
