Fix more typos.

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -142,7 +142,7 @@ L<.subst method|/routine/subst>, which go between the `s`/`S` and the opening
     $str ~~ s:g/match/replacement/;
     say S:i :g /match/replacement/;
 
-You can also use a different delimeter:
+You can also use a different delimiter:
 
     $str ~~ s!foo!!;
     say S{foo} = {} given 'foobar';
