--- a/Type/Semaphore.pod
+++ b/Type/Semaphore.pod
@@ -38,7 +38,7 @@ case the semaphore is typically initialized to 1.
 It is important to have a release on every exit of your program! While this is
 obvious, it is easy to fall in traps such as trowing an exception caused by some
 event. When the program dies there is no problem. When the exception is caught
-your program might eventualy come back to the acquire method and will hang
+your program might eventually come back to the acquire method and will hang
 indefinitely.
 
 =head1 Methods
