More link fixes

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -322,7 +322,7 @@ See also L<https://en.wikipedia.org/wiki/Damian_Conway>.
 =head1 Enum
 
 Enumerations provide constant key-value-pairs with an associated type.
-See L<Enum|/Language/typesystem#enum>.
+See L<Enum|/language/typesystem#enum>.
 
 =head1 Exegesis
 
@@ -349,10 +349,10 @@ L<actions|#Actions>.  A grammar is composed of methods introduced by one of the
 three keywords C<rule>, C<L<#token>>, C<regex>. There is L<#backtrack>ing
 only in C<regex> and C<rule> implies L<#whitespace>s between subrules.
 
-Parsing is done conceptually in two phases, L<lexing> and
-L<syntax analysis>.  Lexing breaks the input string in tokens that are the
-input of L<syntax analysis|#Syntax analysis>. In Perl 6, things are
-not so clear cut and both phases are defined in the L<grammar|#Grammar>.
+Parsing is done conceptually in two phases, L<lexing|#Lexing> and
+L<syntax analysis|#Syntax Analysis>. Lexing breaks the input string in tokens
+that are the input of L<syntax analysis|#Syntax Analysis>. In Perl 6, things
+are not so clear cut and both phases are defined in the L<grammar|#Grammar>.
 
 =head1 handles
 
@@ -639,6 +639,8 @@ Java Virtual Machine
 L<Perl's|#Perl> benevolent dictator for life, among many other things.  See
 also L<https://en.wikipedia.org/wiki/Larry_Wall>.
 
+=head1 Lexing
+
 =head1 List
 
 =head1 Literal
@@ -769,14 +771,16 @@ C<[0]> where C<0> is the postcircumfixed subexpression.
 The C<< <O(I<...>)>  >> construction gives information about an operator
 that completes the information provided by its category.  Below
 C<%conditional> is the category, C<< :reducecheck<ternary> >>, which
-specifies calling C<.ternary> to post-process the L<parse subtree|/parse
-tree> and C<< :pasttype<if> >> specifies the NQP L<#opcode> generated in the
+specifies calling C<.ternary> to post-process the L<parse subtree|#Parse Tree>
+and C<< :pasttype<if> >> specifies the NQP L<#opcode> generated in the
 L<#AST> from the parse subtree.
 
         <O('%conditional, :reducecheck<ternary>, :pasttype<if>')>
 
 
 =head1 OS
+
+=head1 Parse Tree
 
 =head1 Package
 
@@ -811,7 +815,7 @@ The Perl programming language in its many forms.
 
 =head1 PERL
 
-A way to describe L<Perl> as a language, considered to be improper by
+A way to describe L<Perl|#Perl> as a language, considered to be improper by
 many in the L<#Perl Community>.
 
 =head1 POD
@@ -851,7 +855,7 @@ L<#Regular Expression>.
 
 =head1 roast
 
-The Perl 6 L<specification tests|/spectest>, which live here:
+The Perl 6 L<specification tests|#test suite>, which live here:
 L<https://github.com/perl6/roast/>.  Originally developed for L<#pugs>, it
 now serves all Perl 6 implementations.  Why roast? It's the B<r>epository
 B<o>f B<a>ll B<s>pec B<t>ests.
@@ -859,7 +863,7 @@ B<o>f B<a>ll B<s>pec B<t>ests.
 =head1 Role
 
 A role can be composed with zero or more other roles, then instantiated into
-a L<class|#Class>. The L<sigil#Sigil> of a variable name indicates that the defined
+a L<class|#Class>. The L<sigil|#Sigil> of a variable name indicates that the defined
 value in the container denoted by the variable belongs to a class composed
 from the associated role.  For example, the sigil C<@> denotes the
 C<Positional> role. So a variable C<@a> may contain a value of type C<List>
@@ -882,7 +886,7 @@ In Perl, the sigil is the first character of a variable name.  It must be
 either L<#$>, L<#@>, L<#%>, or L<#&> respectively for a L<scalar|#Scalar>,
 L<array|#Array>, L<hash|#Hash>, or L<code|#Code> variable.  See also
 L<#Twigil> and L<#role>.  Also sigilled variables allow short conventions
-for L<variable interpolation#Variable Interpolation> in a double quoted
+for L<variable interpolation|#Variable Interpolation> in a double quoted
 string, or even L<postcircumfix|#Postcircumfix> L<expressions|#Expression>
 starting with such a variable.
 
@@ -945,6 +949,8 @@ by L<#roast>, its L<#test suite>, not the synopses where speculative material
 is not always so flagged or more recent additions have not been documented.
 This is even more true of material that has not been yet implemented.
 
+=head1 Syntax Analysis
+
 =head1 test suite
 
 The Perl 6 test suite is L<#roast>
@@ -981,7 +987,7 @@ The value representing logical C<True> of the L<#Bool> L<enum|#Enum>.
 
 A secondary L<sigil|#Sigil>. For example, %*ENV has a sigil of % and a
 twigil of *.
-See L<Twigils|/doc/Language/variables.pod#Twigils>.
+See L<Twigils|/language/variables#Twigils>.
 
 =head1 Type Object
 
@@ -1016,6 +1022,8 @@ languages:
 =head1 Variable
 
 A variable is a name for a L<container|#Container>.
+
+=head1 Variable Interpolation
 
 =head1 Virtual Machine
 
