--- a/Type/Block.pod
+++ b/Type/Block.pod
@@ -31,7 +31,7 @@ as C<rw> by default:
     say $a;                     # 4
 
 Blocks that aren't of type C<Routine> (which is a subclass of C<Block>) are
-transparent to L<return>.
+transparent to L<return|/syntax/return>.
 
     sub f() {
         say <a b c>.map: { return 42 };
