--- a/Type/Mu.pod
+++ b/Type/Mu.pod
@@ -156,7 +156,7 @@ Classes may provide their own C<new> method to override this default.
 
 C<new> triggers an object construction mechanism that calls submethods named
 C<BUILD> in each class of an inheritance hierarchy, if they exist. See
-L<the documentation on object construction|/language/objects#Object Construction>
+L<the documentation on object construction|/language/objects#Object_Construction>
 for more information.
 
 =head2 method bless
