Less permanent redirections (mostly http → https)

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -523,11 +523,11 @@ task tp be performed by a (relative) newbie.
 
 =head2 LMDDGTFY
 
-Let Me DuckDuckGo That For You.  L<http://lmddgtfy.net>
+Let Me DuckDuckGo That For You.  L<https://lmddgtfy.net>
 
 =head2 LMGTFY
 
-Let Me Google That For You.  L<http://lmgtfy.com/>
+Let Me Google That For You.  L<https://lmgtfy.com/>
 
 =head2 LTA
 
