--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -514,7 +514,7 @@ More examples can be found L<in the DBIsh repository
               on p6doc.
 
 There is an example of using the MySQL client library. There is a project
-L<http://github.com/mberends/minidbi> that wraps these functions with a DBI
+L<https://github.com/mberends/minidbi> that wraps these functions with a DBI
 compatible interface. You'll need that library to hand; on Debian-esque systems
 it can be installed with something like:
 
@@ -545,6 +545,6 @@ You can look at the results via a normal mysql connection:
 =head2 Microsoft Windows
 
 The win32-api-call.p6 script shows an example Windows API call done from Perl 6.
-See L<http://github.com/jnthn/zavolaj/tree/master/examples>
+See L<https://github.com/jnthn/zavolaj/tree/master/examples>
 
 =end pod
