--- a/Language/unicode_entry.pod
+++ b/Language/unicode_entry.pod
@@ -70,7 +70,7 @@ letter λ (lambda), one uses the following key combination:
 
 Further information about unicode and its entry into Emacs can be found on
 the L<Unicode Encoding Emacs wiki
-page|http://www.emacswiki.org/emacs/UnicodeEncoding>.
+page|https://www.emacswiki.org/emacs/UnicodeEncoding>.
 
 You can also use L<RFC 1345|https://tools.ietf.org/html/rfc1345> character
 mnemonics by typing:
@@ -88,9 +88,9 @@ For example, Greek letter λ (lambda) can be entered by typing:
 You can use C<C-\> to toggle L<input method|https://www.gnu.org/software/
 emacs/manual/html_node/emacs/Select-Input-Method.html>.
 
-Another L<input method|http://www.emacswiki.org/emacs/InputMethods>
+Another L<input method|https://www.emacswiki.org/emacs/InputMethods>
 you can use to insert special characters is
-L<TeX|http://www.emacswiki.org/emacs/TeXInputMethod>.
+L<TeX|https://www.emacswiki.org/emacs/TeXInputMethod>.
 Select it by typing C<C-u C-\ TeX RET>. You can enter a special character
 by using a prefix such as C<\>. For example, to enter λ, type:
 
