--- a/Type/Junction.pod
+++ b/Type/Junction.pod
@@ -102,6 +102,6 @@ a negated junction:
 
 =item L<http://perlgeek.de/blog-en/perl-5-to-6/08-junctions.html>
 =item L<http://perl6maven.com/perl6-is-a-value-in-a-given-list-of-values>
-=item L<http://perl6advent.wordpress.com/2009/12/13/day-13-junctions/>
+=item L<https://perl6advent.wordpress.com/2009/12/13/day-13-junctions/>
 
 =end pod
