--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -324,7 +324,7 @@ For now, the process requires that you use git for your module's version
 control.
 
 The instructions herein assume that you have a
-L<GitHub|https://www.github.com> account so that your module can be
+L<GitHub|https://github.com> account so that your module can be
 shared from its GitHub repository, however another provider such as
 L<GitLab|https://about.gitlab.com/> should work as long as it works in
 a similar way.
