Newlines in links do not work very well
I think that it is a bug that has to be fixed, but right now
we can just fix the links.

--- a/Language/unicode_entry.pod
+++ b/Language/unicode_entry.pod
@@ -85,8 +85,8 @@ For example, Greek letter λ (lambda) can be entered by typing:
 
     &l*
 
-You can use C<C-\> to toggle L<input method|https://www.gnu.org/software/
-emacs/manual/html_node/emacs/Select-Input-Method.html>.
+You can use C<C-\> to toggle
+L<input method|https://www.gnu.org/software/emacs/manual/html_node/emacs/Select-Input-Method.html>.
 
 Another L<input method|https://www.emacswiki.org/emacs/InputMethods>
 you can use to insert special characters is
