Make variable names consistent

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -145,7 +145,7 @@ If no tolerance is set, it will default to absolute tolerance of C<1e-5>
     my Numeric ($value, $expected, $abs-tol, $rel-tol) = ...
 
     is-approx $value, $expected;
-    is-approx $got, $expected, 'test description';
+    is-approx $value, $expected, 'test description';
 
     is-approx $value, $expected, $abs-tol;
     is-approx $value, $expected, $abs-tol, 'test description';
