--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -192,9 +192,11 @@ Both versions use C<0.1> for relative tolerance, yet the first can differ
 by about C<1> while the second can differ by about C<10>. The function used
 to calculate the difference is:
 
-    ⁣              |got - expected|
-    ⁣rel-diff = ──────────────────────
-    ⁣           max(|got|, |expected|)
+=begin code
+              |got - expected|
+⁣rel-diff = ──────────────────────
+           max(|got|, |expected|)
+=end code
 
 And the test will fail if C<rel-diff> is higher than C<$rel-tol>
 
